--- a/org.eclipse.jdt.ui/ui/org/eclipse/jdt/internal/ui/text/correction/CorrectionMessages.properties
+++ b/org.eclipse.jdt.ui/ui/org/eclipse/jdt/internal/ui/text/correction/CorrectionMessages.properties
@@ -86,9 +86,10 @@ LocalCorrectionsSubProcessor_addexceptionstoexistingcatch_description=Add except
 LocalCorrectionsSubProcessor_unnecessaryinstanceof_description=Replace with null check
 LocalCorrectionsSubProcessor_unnecessarythrow_description=Remove thrown exception
 LocalCorrectionsSubProcessor_classtointerface_description=Change ''{0}'' to interface
-
+LocalCorrectionsSubProcessor_classtointerface_description=Change ''{0}'' to class
 LocalCorrectionsSubProcessor_externalizestrings_description=Open the 'Externalize Strings' wizard
 LocalCorrectionsSubProcessor_extendstoimplements_description=Change 'extends' to 'implements'
+LocalCorrectionsSubProcessor_implementstoextends_description=Change 'implements' to 'extends'
 LocalCorrectionsSubProcessor_qualify_right_hand_side_description=Qualify right hand side
 LocalCorrectionsSubProcessor_setparenteses_bitop_description=Put bit operations in parentheses
 LocalCorrectionsSubProcessor_externalizestrings_additional_info=Open the 'Externalize Strings' wizard
@@ -180,6 +181,7 @@ ReturnTypeSubProcessor_constrnamemethod_description=Change to constructor
 ReturnTypeSubProcessor_voidmethodreturns_description=Change method return type to ''{0}''
 ReturnTypeSubProcessor_removereturn_description=Change to 'return;'
 ReturnTypeSubProcessor_missingreturntype_description=Set method return type to ''{0}''
+ReturnTypeSubProcessor_addsupertype_description=return super class method
 ReturnTypeSubProcessor_wrongconstructorname_description=Change to constructor
 
 ReturnTypeSubProcessor_changetovoid_description=Change return type to 'void'
